fixed not centered menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ nav {
 }
 
 .er-nav-icons {
-    margin: auto;
+    transform: translateX(0.5em);
     margin-left: auto;
     margin-right: auto;
 }
